--- a/package.json
+++ b/package.json
@@ -71,4 +71,30 @@
     "@storybook/react": "^6.4.9",
     "webpack": "^5.65.0"
   }
+
+,
+
+"babel": {
+
+"presets": [
+
+"@babel/preset-react",
+
+"@babel/preset-env",
+
+"@babel/preset-flow",
+
+"@babel/preset-typescript"
+
+],
+
+"plugins": [
+
+"@babel/plugin-transform-react-jsx"
+
+]
+
+},
+"jest": { "collectCoverageFrom": [ "**/*.{js,jsx}", "**/*.{ts,tsx}"]}
+
 }
