--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.8",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
@@ -17,17 +21,19 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -69,9 +75,30 @@
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.9",
+    "jest": "^27.4.7",
     "webpack": "^5.65.0"
-  }
-
-
-
+  },
+ 
+  "babel": {
+   
+  "presets": [
+   
+  "@babel/preset-react",
+   
+  "@babel/preset-env",
+   
+  "@babel/preset-flow",
+   
+  "@babel/preset-typescript"
+   
+  ],
+   
+  "plugins": [
+   
+  "@babel/plugin-transform-react-jsx",
+  "@babel/plugin-transform-runtime"
+   
+  ]
+   
+  }  
 }
